[추가] 어업별 어획량 관련 데이터 추가

--- a/sea.ipynb
+++ b/sea.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,13 +513,443 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_29524\\1722774272.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  each_produce = each_produce.replace('..', 0)# .. 값을 0으로 변환\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pandas가 알아서 엑셀 읽어서 데이터 만들고 딴다라 다 함\n",
+    "each_produce = pd.read_excel('./data/어업별_어획량.xlsx', index_col = 0)  # 첫번째 열(어업)을 인덱스로 수출 데이터 읽기\n",
+    "each_produce = each_produce.replace('..', 0)# .. 값을 0으로 변환\n",
+    "each_produce = each_produce.apply(lambda x: x.astype(int)) # 각 열에 대하여 float값을 소수점 버린 int 값으로 변환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2021</th>\n",
+       "      <th>2022</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>어업</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>쌍끌이대형저인망어업</th>\n",
+       "      <td>1976</td>\n",
+       "      <td>2237</td>\n",
+       "      <td>2122</td>\n",
+       "      <td>1911</td>\n",
+       "      <td>1694</td>\n",
+       "      <td>1313</td>\n",
+       "      <td>1241</td>\n",
+       "      <td>1651</td>\n",
+       "      <td>1503</td>\n",
+       "      <td>1158</td>\n",
+       "      <td>1043</td>\n",
+       "      <td>1102</td>\n",
+       "      <td>879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>외끌이대형저인망어업</th>\n",
+       "      <td>301</td>\n",
+       "      <td>244</td>\n",
+       "      <td>243</td>\n",
+       "      <td>247</td>\n",
+       "      <td>213</td>\n",
+       "      <td>222</td>\n",
+       "      <td>253</td>\n",
+       "      <td>188</td>\n",
+       "      <td>185</td>\n",
+       "      <td>181</td>\n",
+       "      <td>186</td>\n",
+       "      <td>200</td>\n",
+       "      <td>185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>대형트롤어업</th>\n",
+       "      <td>1235</td>\n",
+       "      <td>1465</td>\n",
+       "      <td>1724</td>\n",
+       "      <td>1442</td>\n",
+       "      <td>1548</td>\n",
+       "      <td>1127</td>\n",
+       "      <td>1625</td>\n",
+       "      <td>931</td>\n",
+       "      <td>852</td>\n",
+       "      <td>729</td>\n",
+       "      <td>741</td>\n",
+       "      <td>654</td>\n",
+       "      <td>187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>동해구외끌이중형저인망어업</th>\n",
+       "      <td>162</td>\n",
+       "      <td>165</td>\n",
+       "      <td>207</td>\n",
+       "      <td>272</td>\n",
+       "      <td>289</td>\n",
+       "      <td>286</td>\n",
+       "      <td>325</td>\n",
+       "      <td>299</td>\n",
+       "      <td>274</td>\n",
+       "      <td>292</td>\n",
+       "      <td>386</td>\n",
+       "      <td>427</td>\n",
+       "      <td>245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>서남해구외끌이중형저인망어업</th>\n",
+       "      <td>288</td>\n",
+       "      <td>259</td>\n",
+       "      <td>273</td>\n",
+       "      <td>290</td>\n",
+       "      <td>210</td>\n",
+       "      <td>214</td>\n",
+       "      <td>211</td>\n",
+       "      <td>238</td>\n",
+       "      <td>224</td>\n",
+       "      <td>189</td>\n",
+       "      <td>199</td>\n",
+       "      <td>191</td>\n",
+       "      <td>186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>동해구중형트롤어업</th>\n",
+       "      <td>753</td>\n",
+       "      <td>1348</td>\n",
+       "      <td>1211</td>\n",
+       "      <td>1108</td>\n",
+       "      <td>824</td>\n",
+       "      <td>811</td>\n",
+       "      <td>801</td>\n",
+       "      <td>314</td>\n",
+       "      <td>263</td>\n",
+       "      <td>159</td>\n",
+       "      <td>322</td>\n",
+       "      <td>251</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>대형선망어업</th>\n",
+       "      <td>8771</td>\n",
+       "      <td>9791</td>\n",
+       "      <td>8520</td>\n",
+       "      <td>8978</td>\n",
+       "      <td>7494</td>\n",
+       "      <td>9070</td>\n",
+       "      <td>8962</td>\n",
+       "      <td>6781</td>\n",
+       "      <td>9077</td>\n",
+       "      <td>8325</td>\n",
+       "      <td>7104</td>\n",
+       "      <td>10505</td>\n",
+       "      <td>10495</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>기선권현망어업</th>\n",
+       "      <td>644</td>\n",
+       "      <td>558</td>\n",
+       "      <td>493</td>\n",
+       "      <td>496</td>\n",
+       "      <td>533</td>\n",
+       "      <td>585</td>\n",
+       "      <td>484</td>\n",
+       "      <td>502</td>\n",
+       "      <td>492</td>\n",
+       "      <td>444</td>\n",
+       "      <td>624</td>\n",
+       "      <td>436</td>\n",
+       "      <td>358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>근해통발어업</th>\n",
+       "      <td>246</td>\n",
+       "      <td>205</td>\n",
+       "      <td>246</td>\n",
+       "      <td>350</td>\n",
+       "      <td>248</td>\n",
+       "      <td>283</td>\n",
+       "      <td>282</td>\n",
+       "      <td>322</td>\n",
+       "      <td>274</td>\n",
+       "      <td>246</td>\n",
+       "      <td>245</td>\n",
+       "      <td>237</td>\n",
+       "      <td>260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>잠수기어업</th>\n",
+       "      <td>70</td>\n",
+       "      <td>120</td>\n",
+       "      <td>95</td>\n",
+       "      <td>86</td>\n",
+       "      <td>96</td>\n",
+       "      <td>77</td>\n",
+       "      <td>67</td>\n",
+       "      <td>74</td>\n",
+       "      <td>68</td>\n",
+       "      <td>70</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>근해안강망어업</th>\n",
+       "      <td>399</td>\n",
+       "      <td>308</td>\n",
+       "      <td>281</td>\n",
+       "      <td>287</td>\n",
+       "      <td>264</td>\n",
+       "      <td>212</td>\n",
+       "      <td>231</td>\n",
+       "      <td>281</td>\n",
+       "      <td>265</td>\n",
+       "      <td>247</td>\n",
+       "      <td>285</td>\n",
+       "      <td>338</td>\n",
+       "      <td>319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>근해채낚기어업</th>\n",
+       "      <td>120</td>\n",
+       "      <td>84</td>\n",
+       "      <td>96</td>\n",
+       "      <td>93</td>\n",
+       "      <td>99</td>\n",
+       "      <td>80</td>\n",
+       "      <td>52</td>\n",
+       "      <td>48</td>\n",
+       "      <td>41</td>\n",
+       "      <td>42</td>\n",
+       "      <td>52</td>\n",
+       "      <td>50</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>근해자망어업</th>\n",
+       "      <td>272</td>\n",
+       "      <td>183</td>\n",
+       "      <td>166</td>\n",
+       "      <td>197</td>\n",
+       "      <td>173</td>\n",
+       "      <td>163</td>\n",
+       "      <td>128</td>\n",
+       "      <td>127</td>\n",
+       "      <td>137</td>\n",
+       "      <td>146</td>\n",
+       "      <td>191</td>\n",
+       "      <td>172</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>근해연승어업</th>\n",
+       "      <td>90</td>\n",
+       "      <td>77</td>\n",
+       "      <td>65</td>\n",
+       "      <td>63</td>\n",
+       "      <td>85</td>\n",
+       "      <td>56</td>\n",
+       "      <td>62</td>\n",
+       "      <td>101</td>\n",
+       "      <td>128</td>\n",
+       "      <td>122</td>\n",
+       "      <td>152</td>\n",
+       "      <td>141</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>근해장어통발</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>92</td>\n",
+       "      <td>134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>평균</th>\n",
+       "      <td>308</td>\n",
+       "      <td>297</td>\n",
+       "      <td>287</td>\n",
+       "      <td>281</td>\n",
+       "      <td>255</td>\n",
+       "      <td>244</td>\n",
+       "      <td>235</td>\n",
+       "      <td>235</td>\n",
+       "      <td>249</td>\n",
+       "      <td>225</td>\n",
+       "      <td>236</td>\n",
+       "      <td>248</td>\n",
+       "      <td>205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>정치망 어업</th>\n",
+       "      <td>86</td>\n",
+       "      <td>229</td>\n",
+       "      <td>190</td>\n",
+       "      <td>166</td>\n",
+       "      <td>154</td>\n",
+       "      <td>149</td>\n",
+       "      <td>106</td>\n",
+       "      <td>114</td>\n",
+       "      <td>94</td>\n",
+       "      <td>118</td>\n",
+       "      <td>87</td>\n",
+       "      <td>86</td>\n",
+       "      <td>205</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                2010  2011  2012  2013  2014  2015  2016  2017  2018  2019  \\\n",
+       "어업                                                                           \n",
+       "쌍끌이대형저인망어업      1976  2237  2122  1911  1694  1313  1241  1651  1503  1158   \n",
+       "외끌이대형저인망어업       301   244   243   247   213   222   253   188   185   181   \n",
+       "대형트롤어업          1235  1465  1724  1442  1548  1127  1625   931   852   729   \n",
+       "동해구외끌이중형저인망어업    162   165   207   272   289   286   325   299   274   292   \n",
+       "서남해구외끌이중형저인망어업   288   259   273   290   210   214   211   238   224   189   \n",
+       "동해구중형트롤어업        753  1348  1211  1108   824   811   801   314   263   159   \n",
+       "대형선망어업          8771  9791  8520  8978  7494  9070  8962  6781  9077  8325   \n",
+       "기선권현망어업          644   558   493   496   533   585   484   502   492   444   \n",
+       "근해통발어업           246   205   246   350   248   283   282   322   274   246   \n",
+       "잠수기어업             70   120    95    86    96    77    67    74    68    70   \n",
+       "근해안강망어업          399   308   281   287   264   212   231   281   265   247   \n",
+       "근해채낚기어업          120    84    96    93    99    80    52    48    41    42   \n",
+       "근해자망어업           272   183   166   197   173   163   128   127   137   146   \n",
+       "근해연승어업            90    77    65    63    85    56    62   101   128   122   \n",
+       "근해장어통발             0     0     0     0     0     0     0     0     0     0   \n",
+       "평균               308   297   287   281   255   244   235   235   249   225   \n",
+       "정치망 어업            86   229   190   166   154   149   106   114    94   118   \n",
+       "\n",
+       "                2020   2021   2022  \n",
+       "어업                                  \n",
+       "쌍끌이대형저인망어업      1043   1102    879  \n",
+       "외끌이대형저인망어업       186    200    185  \n",
+       "대형트롤어업           741    654    187  \n",
+       "동해구외끌이중형저인망어업    386    427    245  \n",
+       "서남해구외끌이중형저인망어업   199    191    186  \n",
+       "동해구중형트롤어업        322    251     98  \n",
+       "대형선망어업          7104  10505  10495  \n",
+       "기선권현망어업          624    436    358  \n",
+       "근해통발어업           245    237    260  \n",
+       "잠수기어업             80     75     44  \n",
+       "근해안강망어업          285    338    319  \n",
+       "근해채낚기어업           52     50     37  \n",
+       "근해자망어업           191    172    116  \n",
+       "근해연승어업           152    141     99  \n",
+       "근해장어통발             0     92    134  \n",
+       "평균               236    248    205  \n",
+       "정치망 어업            87     86    205  "
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "each_produce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     어종    년도         어획량\n",
+      "31   합계  2017  539512.003\n",
+      "63   합계  2018  632133.689\n",
+      "95   합계  2019  687534.040\n",
+      "127  합계  2020  614643.620\n",
+      "159  합계  2021  813169.431\n",
+      "191  합계  2022  926296.054\n"
+     ]
+    }
+   ],
    "source": [
     "# 합계 라인 그래프\n",
     "export_reverse = export.reset_index().melt(id_vars=['어종'], var_name = '년도', value_name = '어획량') # 데이터를 long format으로 변환\n",
     "#어종을 y축, 년도를 x축으로 세우기 위함\n",
     "jellyfish_data = export_reverse[export_reverse['어종'] == '합계'] # 해파리에 대한 데이터만\n",
     "print(jellyfish_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pandas가 알아서 엑셀 읽어서 데이터 만들고 딴다라 다 함\n",
+    "each_produce = pd.read_excel('./data/어업별_어획량.xlsx', index_col = 0)  # 첫번째 열(어업)을 인덱스로 수출 데이터 읽기"
    ]
   },
   {
@@ -546,6 +976,13 @@
     "# 엑셀 파일 닫기\n",
     "wb.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
