--- a/disaster.ipynb
+++ b/disaster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "file = \"자연재해_발생횟수(2000~2022).xlsx\"\n",
+    "file = \"./data/자연재해_발생횟수(2000~2022).xlsx\"\n",
     "data = pd.read_excel(file, index_col = 0)\n",
     "\n",
     "# 한글 폰트 설정 (시스템에 설치된 폰트 경로에 맞게 설정)\n",
