--- a/CO2.ipynb
+++ b/CO2.ipynb
@@ -22,7 +22,7 @@
     "import seaborn as sns\n",
     "\n",
     "# 파일 읽기\n",
-    "file = 'CO2.xlsx'\n",
+    "file = './data/CO2.xlsx'\n",
     "data = pd.read_excel(file)\n",
     "\n",
     "# 한글 폰트 설정 (시스템에 설치된 폰트 경로에 맞게 설정)\n",
