[업데이트] import 정리

--- a/korea_sea.ipynb
+++ b/korea_sea.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# HeatMap 생성 테스트 코드\n",
     "import pandas as pd\n",
     "import folium\n",
     "from folium.plugins import HeatMap\n",
